# mccastellazzob

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATABASE_MIGRATION_PLAN.md  Dockerfile  MULTILANGUAGE_FLAGS_GUIDE.md  Makefile  README.md  SEO_SCHEMA_GUIDE.md  TDD_NAVIGATION_REPORT.md  TRADUZIONI.md  conftest.py  copia_crea_traduzioni.py  deploy.sh  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/core/: __init__.py  admin_views.py  apps.py  audit.py  context_processors.py  daily_tasks.py  forms.py  http_safe.py  image_optimizer.py  localize_patches.py  machine_translator.py  maps.py  middleware.py  mixins.py  schema.py  seo.py  translation.py  validators.py  views.py  wagtail_hooks.py  widgets.py
apps/core/management/commands/: force_translate.py  populate_demo.py  retry_translations.py  traduci.py  translate_po.py
apps/custom_user/: __init__.py  admin.py  apps.py  models.py
apps/custom_user/migrations/: 0001_initial.py  __init__.py
apps/users/: __init__.py  admin.py  apps.py  models.py
apps/users/migrations/: 0001_initial.py  __init__.py
apps/website/: __init__.py  apps.py  blocks.py  context_processors.py  views.py
apps/website/management/commands/: archive_past_events.py  create_missing_pages.py  import_static_content.py  populate_content.py
apps/website/migrations/: 0001_initial.py  0002_add_sitesettings.py  0003_add_blocks_streamfields.py  0004_privacypage.py  0005_add_about_page_fields.py  0006_add_contact_page_text_fields.py  0007_add_site_settings_organization_fields.py  0008_add_contact_fields_to_settings.py  0009_add_navbar_footer_snippets.py  0010_gallerypage_columns_gallerypage_show_filters_and_more.py  0011_add_featured_event_to_homepage.py  0012_add_hero_text_fields.py  0013_add_hero_carousel.py  0014_add_cta_fields.py  0015_fix_sitesettings_site_field.py  0016_add_founding_year.py  0017_add_sport_and_member_of.py  0018_add_gallery_category.py  0019_update_gallery_image_category.py  0020_add_gallery_source_collection.py  0021_remove_source_collection.py  0022_add_faq_to_contactpage.py  0023_simple_carousel.py  0024_add_simple_carousel_to_homepage.py  0025_add_news_pages.py  0026_news_body_content_blocks.py  0027_news_body_no_table.py  0028_news_featured_pages.py  0029_event_tags.py  0030_alter_gallerycategory_icon.py  0031_eventdetailpage_attachments_alter_boardpage_members.py  0032_alter_newspage_body.py  __init__.py
apps/website/models/: __init__.py  about.py  events.py  gallery.py  home.py  news.py  pages.py  privacy.py  settings.py  snippets.py  timeline.py
apps/website/services/: archive.py
apps/website/templatetags/: __init__.py  website_tags.py
brief/: gunicornmccastellazzob.service  nginx.conf
docker/: entrypoint.sh  nginx.conf
docker/conf.d/: .gitkeep
docs/: EVENT_ATTACHMENTS_PLAN.md  MIGRAZIONE_CRX6.md  MULTILINGUA.md  SECURITY_AUDIT.md  SECURITY_AUDIT_V2.md  SECURITY_REMEDIATION_DECISIONS.md
locale/de/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/it/LC_MESSAGES/: django.mo  django.po
mccastellazzob/: __init__.py  urls.py  wsgi.py
mccastellazzob/settings/: __init__.py  base.py  dev.py  docker.py  prod.py  test.py
motoclub-static/: COLORI_APPLICATI.txt  COLOR_SYSTEM.md  EXAMPLES.md  MODIFICHE_COMPLETATE.txt  PROFILO_NAVBAR_DORATA.txt  PROPOSAL.md  QUICK_START.md  README.md  SUMMARY.md  WAGTAIL_INTEGRATION.md  chi-siamo.html  color-demo.html  color-tools.py  colors.json  consiglio.html  contatti.html  eventi.html  galleria.html  index-old.html  index.html  test-colors.css
motoclub-static/css/: animations.css  style.css
motoclub-static/js/: color-config.js  color-manager.js  main.js
motoclub-static/sarwisi-extracted/: README.md  index.html  metadata.json  package.json
scripts/: fix_i18n_tags.py  populate_navigation.py
templates/: 404.html
templates/account/: email_confirm.jinja2  login.jinja2  logout.jinja2  password_change.jinja2  password_reset.jinja2  password_reset_done.jinja2  password_set.jinja2  signup.jinja2  verification_sent.jinja2
templates/coderedcms/blocks/: image_gallery_block.html
templates/wagtailadmin/: bulk_upload.html
templates/website/: base.jinja2  base_old.jinja2
templates/website/blocks/: article_block.html  cta_block.html  cta_block.jinja2  document_block.jinja2  event_attachment_block.jinja2  event_card_block.html  faq_block.jinja2  gallery_block.html  gallery_block.jinja2  hero_countdown_block.html  hero_countdown_block.jinja2  hero_slider_block.html  hero_slider_block.jinja2  map_block.jinja2  member_block.jinja2  section_card_block.html  section_card_block.jinja2  section_cards_grid_block.jinja2  stats_block.html  stats_block.jinja2  timeline_block.html  timeline_block.jinja2  values_block.html  values_block.jinja2
templates/website/includes/: accessibility_toolbar.jinja2  gold_title.jinja2  simple_carousel.jinja2
templates/website/pages/: about_page.jinja2  board_page.jinja2  contact_page.jinja2  event_detail_page.jinja2  events_archive_page.jinja2  events_page.jinja2  gallery_page.jinja2  home_page.jinja2  news_index_page.jinja2  news_page.jinja2  privacy_page.jinja2  timeline_page.jinja2  transparency_page.jinja2
tests/: __init__.py  manual_test_links_tdd.py  test_about_page.py  test_accessibility_toolbar.py  test_archive_past_events.py  test_blocks.py  test_bulk_upload.py  test_contact_form.py  test_contact_page.py  test_context_processors.py  test_create_missing_pages.py  test_gallery.py  test_homepage_carousel.py  test_links_tdd.py  test_links_tdd.sh  test_maps.py  test_models.py  test_navigation_links.py  test_news.py  test_pages.py  test_schema.py  test_snippets.py  test_translations.py  test_users.py  test_validators.py
tests/factories/: __init__.py  pages.py  snippets.py  users.py
